--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prometheus-client-js",
-  "version": "2.3.4",
+  "version": "2.3.5",
   "description": "Prometheus Metrics Client implemented in Pure Node.JS",
   "main": "lib/client.js",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "author": "Erik Kristensen <erik@erikkristensen.com>",
   "license": "MIT",
+	"repository": "ekristen/prometheus-client",
   "devDependencies": {
     "faucet": "0.0.1",
     "tape": "^4.2.2"
